Added HM-1X version and connected

--- a/HM-1X_Aid_v01/App.config
+++ b/HM-1X_Aid_v01/App.config
@@ -37,6 +37,9 @@
             <setting name="charsAfterTX" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="moduleType" serializeAs="String">
+                <value>0</value>
+            </setting>
         </HM_1X_Aid_v01.Properties.Settings>
     </userSettings>
 </configuration>
