--- a/HM-1X_Aid_v01/Properties/Settings.settings
+++ b/HM-1X_Aid_v01/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="charsAfterTX" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="moduleType" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
