Added Commands Explained

--- a/HM-1X_Aid_v01/HM-1X_Aid_v01.csproj
+++ b/HM-1X_Aid_v01/HM-1X_Aid_v01.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hm1xConstants.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
