Finished Parameter adding

--- a/HM-1X_Aid_v01/App.config
+++ b/HM-1X_Aid_v01/App.config
@@ -40,6 +40,12 @@
             <setting name="moduleType" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="bottomAreaTab" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="hm1xCommand" serializeAs="String">
+                <value>0</value>
+            </setting>
         </HM_1X_Aid_v01.Properties.Settings>
     </userSettings>
 </configuration>
