--- a/HM-1X_Aid_v01/Properties/Settings.settings
+++ b/HM-1X_Aid_v01/Properties/Settings.settings
@@ -32,5 +32,11 @@
     <Setting Name="moduleType" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="bottomAreaTab" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="hm1xCommand" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
