Commented out hhk and hhp for ClickOnce

--- a/.gitignore
+++ b/.gitignore
@@ -126,8 +126,8 @@ DocProject/buildhelp/
 DocProject/Help/*.HxT
 DocProject/Help/*.HxC
 DocProject/Help/*.hhc
-DocProject/Help/*.hhk
-DocProject/Help/*.hhp
+#DocProject/Help/*.hhk
+#DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
 
