--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,8 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# For ClickOnce deployment
+*.manifest binary
+*.application binary
+*.deploy binary
