Trying to setup OnceClick

--- a/.gitignore
+++ b/.gitignore
@@ -126,18 +126,16 @@ DocProject/buildhelp/
 DocProject/Help/*.HxT
 DocProject/Help/*.HxC
 DocProject/Help/*.hhc
-#DocProject/Help/*.hhk
-#DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
 
 # Click-Once directory
-publish/
+HM-1X_Aid_v01/publish/
 
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
